--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CriminalIntent</string>
+    <string name="crime_title_hint">input a title of crime</string>
 </resources>
