--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">CriminalIntent</string>
     <string name="crime_title_hint">input a title of crime</string>
+    <string name="crime_title_label">Title</string>
+    <string name="crime_details_label">Description</string>
+    <string name="crime_solved_label">solved</string>
 </resources>
